Wed Feb 25 16:22:50 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * orbsvcs/orbsvcs/IFRService/Container_i.cpp:
        * orbsvcs/orbsvcs/IFRService/ConstantDef_i.cpp:
        * orbsvcs/orbsvcs/IFRService/Contained_i.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/main.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Inheritance_Test/run_test.pl:
        * orbsvcs/tests/InterfaceRepo/Application_Test/IFR_Application_Test.mpc:
        * orbsvcs/tests/InterfaceRepo/Application_Test/server.cpp:
        * orbsvcs/tests/InterfaceRepo/Application_Test/test_i.cpp:
        * tests/NestedUpcall/MT_Client_Test/server.cpp:
        * tests/NestedUpcall/MT_Client_Test/client.cpp:

          Fixed memory leaks.

Wed Feb 25 10:07:20 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Bug_3574_Regression/test.cpp:
        * tests/Bug_3574_Regression/run_test.pl:
        * tests/Bug_3574_Regression/README:
        * tests/Bug_3574_Regression/Bug_3574_Regression.mpc:
        * bin/tao_orb_tests.lst:

          Added a test for bug#3574 and scheduled it for run.

Wed Feb 25 00:28:09 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * tao/RTCORBA/RT_Invocation_Endpoint_Selectors.cpp:

          Removed two throw statements that prevented client request
          interceptors to be invoked. Thanks to Simon McQueen <sm at
          prismtech dot com> for pointing this out. This fix
          closes [BUGID:3582].

Tue Feb 24 11:27:44 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tao/QtResource/QtResource_Loader.h:
          Resolved compiler error when using Qt 4.

Mon Feb 23 17:42:11 UTC 2009  Friedhelm Wolf  <fwolf@dre.vanderbilt.edu>

        * tests/Portable_Interceptors/Bug_3582/run_test.pl:

          Updated to new test framework.

Mon Feb 23 13:12:52 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:
